# neutran

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  class_layer.mod  class_net.mod  class_neuron.mod  layer.f95  main.f95  net.f95  neuron.f95  types.f95  types.mod  weights.f95
example/: main.f95
modules/: functions.f95  layer.f95  types.f95
src/: functions.f95  initMethods.f95  layer.f95  net.f95  neuron.f95  nnet.f95  types.f95
test/: CMakeLists.txt  neuronTest.f95
test/src/: functionsTest.f95  helpers.f95  layerTest.f95  netTest.f95  neuronTest.f95
